@@ -1,3 +1,11 @@
+2009-05-27  Florent Lamiraux  <florent@laas.fr>
+
+	Regenereate .pc file if Makefile has changed.
+
+	This ensures that the .pc file is regenerated if configure has been
+	invoked.
+	* template-project/Makefile.am: 
+
 2009-05-25  Florent Lamiraux  <florent@laas.fr>
 
 	Removed trailing backslash in Makefile.
